...
  return (
    <SafeAreaView style={styles.container}>
      {/* <View style={styles.cards}>
        <WeatherCard weather={weather} />
      </View> */}
      <View style={styles.hours}>
        <Text style={styles.sectionTitle}>Hourly Forecast</Text>
        <TouchableOpacity
          onPress={() =>
            router.push({
              pathname: "/forecast",
              params: { forecast: JSON.stringify(forecast) },
            })
          }
        >
          <Text style={styles.sectionTitle}>Next hours ></Text>
        </TouchableOpacity>
      </View>
      <View style={styles.section}>
        <FlatList
          data={forecast.list}
          renderItem={ForecastItem}
...
