...
  return (
    <View style={styles.container}>
      <View style={styles.header}>
        <TouchableOpacity onPress={() => router.back()}>
          <Ionicons name="arrow-back" size={28} color="#fff" />
        </TouchableOpacity>
        <Text style={styles.headerTitle}>Forecast</Text>
      </View>
      <View style={{ height: "80%" }}>
        <FlatList
          data={forecast.list.slice(0, 10)}
          keyExtractor={(item, index) => index.toString()}
          contentContainerStyle={styles.listContainer}
          renderItem={renderItem}
        />
      </View>
      <Button
        title="next"
        style={{ marginBottom: 15 }}
        onPress={() => router.push("/blackscreen")}
      />
    </View>
  );
}
...
